--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
     </modules>
 
     <properties>
+        <spring-security.version>3.1.0.RELEASE</spring-security.version>
+        <spring.version>3.1.0.RELEASE</spring.version>
+
         <junit.version>4.9</junit.version>
         <slf4j.version>1.6.6</slf4j.version>
         <commons-lang3.version>3.0.1</commons-lang3.version>
