--- a/web-app/pom.xml
+++ b/web-app/pom.xml
@@ -12,13 +12,66 @@
     <artifactId>web-app</artifactId>
     <packaging>war</packaging>
 
-    <version>1.0-SNAPSHOT</version>
     <name>Torrent Eater Webapp</name>
-
-    <dependencies>
-    </dependencies>
 
     <build>
         <finalName>TorrentEater</finalName>
     </build>
+
+    <dependencies>
+
+        <!--project-->
+        <dependency>
+            <groupId>com.asevastyanov.torrentEater</groupId>
+            <artifactId>ass-parser</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.asevastyanov.torrentEater</groupId>
+            <artifactId>downloader</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <!--spring-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>${spring-security.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${spring-security.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${spring-security.version}</version>
+        </dependency>
+
+        <!--jstl-->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+        </dependency>
+    </dependencies>
+
 </project>
